Add notebook normalization logic for katex expressions & fix docs
./fix

--- a/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/bells-inequality-with-qiskit.ipynb
@@ -225,11 +225,22 @@
     "## What does Born's option (non-deterministic quantum mechanics) predict?\n",
     "\n",
     "Lucas will pick some axis and find the spin of one particle to be in either the positive or negative direction. Whatever he obtains, let us orient our axes such that the $z$ axis is that direction. Then we can write the initial state after the decay of the meson and before any measurement as\n",
-    "$$|\\psi \\rangle =\\frac{1}{\\sqrt{2}}(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R)$$\n",
+    "\n",
+    "$$\n",
+    "|\\psi \\rangle =\\frac{1}{\\sqrt{2}}(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R)\n",
+    "$$\n",
+    "\n",
     "Rihanna will measure her particle's spin along some other direction at an angle $\\theta$ relative to Lucas's. The spin operator along some arbitrary direction $\\hat{n}$ is given by\n",
-    "$$\\hat{S}_{\\hat{n}}=\\frac{\\hbar}{2}\\begin{bmatrix} \\cos(\\theta) & \\sin(\\theta) e^{-i\\phi} \\\\ \\sin(\\theta) e^{i\\phi} & -\\cos(\\theta) \\end{bmatrix}$$\n",
+    "\n",
+    "$$\n",
+    "\\hat{S}_{\\hat{n}}=\\frac{\\hbar}{2}\\begin{bmatrix} \\cos(\\theta) & \\sin(\\theta) e^{-i\\phi} \\\\ \\sin(\\theta) e^{i\\phi} & -\\cos(\\theta) \\end{bmatrix}\n",
+    "$$\n",
+    "\n",
     "The eigenstates of this operator are\n",
-    "$$|+\\rangle_{\\hat{n}}=\\cos(\\theta/2)|0\\rangle+\\sin(\\theta/2)e^{i\\phi}|1\\rangle \\\\ |-\\rangle_{\\hat{n}}=\\sin(\\theta/2)|0\\rangle-\\cos(\\theta/2)e^{i\\phi}|1\\rangle$$\n",
+    "\n",
+    "$$\n",
+    "|+\\rangle_{\\hat{n}}=\\cos(\\theta/2)|0\\rangle+\\sin(\\theta/2)e^{i\\phi}|1\\rangle \\\\ |-\\rangle_{\\hat{n}}=\\sin(\\theta/2)|0\\rangle-\\cos(\\theta/2)e^{i\\phi}|1\\rangle\n",
+    "$$\n",
     "\n",
     "### Check-in question\n",
     "\n",
@@ -240,28 +251,49 @@
     "$$\n",
     "\\hat{S}_{\\hat{n}}|+\\rangle_{\\hat{n}}=\\frac{\\hbar}{2}\\begin{bmatrix} \\cos(\\theta) & \\sin(\\theta) e^{-i\\phi} \\\\ \\sin(\\theta) e^{i\\phi} & -\\cos(\\theta) \\end{bmatrix} \\begin{bmatrix} \\cos(\\theta/2) \\\\ \\sin(\\theta/2)e^{i\\phi}\\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "$$\n",
     "=\\frac{\\hbar}{2}\\begin{bmatrix} \\cos(\\theta)\\cos(\\theta/2) + \\sin(\\theta)\\sin(\\theta/2)e^{i\\phi} e^{-i\\phi} \\\\ \\cos(\\theta/2)\\sin(\\theta) e^{i\\phi} -\\cos(\\theta)\\sin(\\theta/2)e^{i\\phi} \\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "Using $\\cos(\\theta)=\\cos^2(\\theta/2)-\\sin^2(\\theta/2)$ and $\\sin(\\theta)=2\\cos(\\theta/2)\\sin(\\theta/2)$, we have\n",
+    "\n",
     "$$\n",
     "=\\frac{\\hbar}{2}\\begin{bmatrix} \\left(\\cos(\\theta) + 2\\sin^2(\\theta/2)\\right) \\cos(\\theta/2) \\\\ \\left(2\\cos^2(\\theta/2) -\\cos^2(\\theta/2)+\\sin^2(\\theta/2)\\right)\\sin(\\theta/2)e^{i\\phi} \\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "$$\n",
     "=\\frac{\\hbar}{2}\\begin{bmatrix} \\left(\\cos^2(\\theta/2)-\\sin^2(\\theta/2) + 2\\sin^2(\\theta/2)\\right) \\cos(\\theta/2) \\\\ \\left(2\\cos^2(\\theta/2) -\\cos^2(\\theta/2)+\\sin^2(\\theta/2)\\right)\\sin(\\theta/2)e^{i\\phi} \\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "$$\n",
     "=\\frac{\\hbar}{2}\\begin{bmatrix} \\cos(\\theta/2) \\\\ \\sin(\\theta/2)e^{i\\phi} \\end{bmatrix}\n",
     "$$\n",
+    "\n",
     "This demonstrates that $|+\\rangle_{\\hat{n}}$ is an eigenstate and the corresponding eigenvalue is $\\frac{\\hbar}{2}$.\n",
     "</details>\n",
     "\n",
-    "The probability of Lucas measuring a spin to be in the positive direction along the axis he chose $|+\\rangle$ $and$ that Rihanna also measures a positive spin along her chosen direction $|+\\rangle_{\\hat{n}}$ is\n",
-    "$$P_{++}=\\left|\\left(_L\\langle+|_{R,\\hat{n}}\\langle+|\\right)|\\psi\\rangle\\right|^2$$\n",
-    "$$P_{++}=\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2$$\n",
-    "$$P_{++}=\\frac{1}{2}\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\left(|+\\rangle_L|-\\rangle_R\\right)    \\right|^2$$\n",
-    "$$P_{++}=\\frac{1}{2}\\left|  \\left(\\sin(\\theta/2)e^{-i\\phi}\\vphantom{p}_R\\langle-|\\right) |-\\rangle_R    \\right|^2$$\n",
-    "$$P_{++}=\\frac{1}{2}\\sin^2(\\theta/2)$$\n",
+    "The probability of Lucas measuring a spin to be in the positive direction along the axis he chose $|+\\rangle$ $and$ that Rihanna also measures a positive spin along her chosen direction $|+\\rangle_{\\hat{n}}$\n",
+    "\n",
+    "$$\n",
+    "P_{++}=\\left|\\left(_L\\langle+|_{R,\\hat{n}}\\langle+|\\right)|\\psi\\rangle\\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{++}=\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{++}=\\frac{1}{2}\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\left(|+\\rangle_L|-\\rangle_R\\right)    \\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{++}=\\frac{1}{2}\\left|  \\left(\\sin(\\theta/2)e^{-i\\phi}\\vphantom{p}_R\\langle-|\\right) |-\\rangle_R    \\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{++}=\\frac{1}{2}\\sin^2(\\theta/2)\n",
+    "$$\n",
     "\n",
     "### Check-in question\n",
     "\n",
@@ -270,11 +302,26 @@
     "<summary>Answer:</summary>\n",
     "\n",
     "Key:\n",
-    "$$P_{--}=\\left|\\left(_L\\langle-|_{R,\\hat{-n}}\\langle+|\\right)|\\psi\\rangle\\right|^2$$\n",
-    "$$P_{--}=\\left|  \\left(_L\\langle-|_R\\left(\\sin(\\theta/2)\\langle+|-\\cos(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2$$\n",
-    "$$P_{--}=\\frac{1}{2}\\left|  \\left(_L\\langle-|_R\\left(\\sin(\\theta/2)\\langle+|-\\cos(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\left(-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2$$\n",
-    "$$P_{--}=\\frac{1}{2}\\left|  \\left(\\sin(\\theta/2) \\vphantom{p}_R\\langle+|\\right) |+\\rangle_R    \\right|^2$$\n",
-    "$$P_{--}=\\frac{1}{2}\\sin^2(\\theta/2)$$\n",
+    "\n",
+    "$$\n",
+    "P_{--}=\\left|\\left(_L\\langle-|_{R,\\hat{-n}}\\langle+|\\right)|\\psi\\rangle\\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{--}=\\left|  \\left(_L\\langle-|_R\\left(\\sin(\\theta/2)\\langle+|-\\cos(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{--}=\\frac{1}{2}\\left|  \\left(_L\\langle-|_R\\left(\\sin(\\theta/2)\\langle+|-\\cos(\\theta/2)e^{-i\\phi}\\langle-|\\right)\\right)  \\left(-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{--}=\\frac{1}{2}\\left|  \\left(\\sin(\\theta/2) \\vphantom{p}_R\\langle+|\\right) |+\\rangle_R    \\right|^2\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_{--}=\\frac{1}{2}\\sin^2(\\theta/2)\n",
+    "$$\n",
     "\n",
     "</details>\n",
     "\n",
@@ -297,7 +344,9 @@
     "\n",
     "We were specifically sketching the case where axes are at $120\\deg$ relative to each other. Remember, whatever direction ($\\pm a$, $\\pm b$, or $\\pm c$) Lucas obtains, we call that $z$. Then Rihanna randomly chooses to measure along either $\\pm a$, $\\pm b$, or $\\pm c$. If her choice is the same as Lucas's (up to a sign), then they are both measuring along $z$, and the probability of Rihanna also measuring $+z$ is zero. This should happen 1/3 of the time, since Rihanna's choice of axis is independent of Lucas's choice. For any other choice, Rihanna will be measuring along an axis either $120\\deg = 2\\pi/3$ radians from $z$ (1/3 of the time) or $240\\deg = 4\\pi/3$ radians from $z$ (1/3 of the time). And of course, along either of those axes, the spin could be measured to be in the positive or negative direction. This gives us a total probability of Lucas and Rihanna obtaining the same sign:\n",
     "\n",
-    "$$P_{\\text{same}} = \\frac{1}{3}\\left(   0 + \\sin^2(\\pi/3) + \\sin^2(2\\pi/3)     \\right) = \\frac{1}{3}\\left(   0 + \\frac{3}{4} + \\frac{3}{4}     \\right) = \\frac{1}{2}$$"
+    "$$\n",
+    "P_{\\text{same}} = \\frac{1}{3}\\left(   0 + \\sin^2(\\pi/3) + \\sin^2(2\\pi/3)     \\right) = \\frac{1}{3}\\left(   0 + \\frac{3}{4} + \\frac{3}{4}     \\right) = \\frac{1}{2}\n",
+    "$$"
    ]
   },
   {
@@ -327,19 +376,29 @@
     "\n",
     "In keeping with our treatment above, let us define the direction of Lucas's measurement to be $+z$. This was convenient even in the algebraic approach, but it is especially convenient for quantum computation, since what is typically measured is the qubit's projection along $z$.\n",
     "We want to make a quantum circuit that gives us the same probability conditions as those above for $P_{++}$. We are free to orient our plane such that $\\phi=0$, and we obtain\n",
-    "$$P_{++}=\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2$$\n",
+    "\n",
+    "$$\n",
+    "P_{++}=\\left|  \\left(_L\\langle+|_R\\left(\\cos(\\theta/2)\\langle+|+\\sin(\\theta/2)\\langle-|\\right)\\right)  \\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)    \\right|^2\n",
+    "$$\n",
+    "\n",
     "We need to know a few things about IBM quantum computers, to guide our discussion. Firstly, qubits start out initialized in the $|0\\rangle = |+\\rangle_z$ state. As mentioned, before, when measurements are made, they are along the $z$ axis. So the goal is to determine what operators we can insert between the measurement basis states $\\langle 0|\\langle 0|$ and the initial states of the qubits $|0\\rangle |0\\rangle$ to obtain the complicated expression above. For that, we'll need to review some basic gates in quantum computing.\n",
     "\n",
     "$X$ gate: Equivalent to a NOT operation. Single-qubit gate.\n",
-    "$$X|0\\rangle = |1\\rangle,\\\\X|1\\rangle=|0\\rangle$$\n",
-    "$$X=\\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix}$$\n",
+    "\n",
+    "$$\n",
+    "X|0\\rangle = |1\\rangle,\\\\X|1\\rangle=|0\\rangle\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "X=\\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix}\n",
+    "$$\n",
     "\n",
     "In Qiskit, creating a circuit with an $X$ gate looks like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7339b9d8-2508-4821-8823-264b8c7afdad",
    "metadata": {},
    "outputs": [
@@ -377,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b9da36f3-3ccc-4af0-ae16-a1ce8741211a",
    "metadata": {},
    "outputs": [
@@ -411,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7242ff98-867d-4e61-ab66-81920bb132ec",
    "metadata": {},
    "outputs": [
@@ -448,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f4eddadc-834e-48e8-b190-dfc7727c2b79",
    "metadata": {},
    "outputs": [
@@ -514,30 +573,62 @@
     "## From physical experiment to quantum circuits\n",
     "\n",
     "From the operations of these gates, we can see, for example, that the kets in the expressions for $P_{++}$:\n",
-    "$$\\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)\n",
+    "$$\n",
+    "\n",
     "are likely to involve a Hadamard gate to get the superposition, and a CNOT gate to create the entanglement.\n",
     "\n",
     "We will now use the H, X, and CNOT gates to turn $|0\\rangle_L|0\\rangle_R$ into $\\frac{1}{\\sqrt{2}}\\left(|+\\rangle_L|-\\rangle_R-|-\\rangle_L|+\\rangle_R\\right)$:\n",
     "\n",
-    "$$\\frac{1}{\\sqrt{2}}\\left(|0\\rangle_L|1\\rangle_R-|1\\rangle_L|0\\rangle_R\\right)$$\n",
-    "$$\\frac{1}{\\sqrt{2}}CNOT_{LR}\\left(|0\\rangle_L|1\\rangle_R-|1\\rangle_L|1\\rangle_R\\right)$$\n",
+    "$$\n",
+    "\\frac{1}{\\sqrt{2}}\\left(|0\\rangle_L|1\\rangle_R-|1\\rangle_L|0\\rangle_R\\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{\\sqrt{2}}CNOT_{LR}\\left(|0\\rangle_L|1\\rangle_R-|1\\rangle_L|1\\rangle_R\\right)\n",
+    "$$\n",
+    "\n",
     "Here $CNOT_{LR}$ means a CNOT gate using L as the control and R as the target. We can now factor out the R part of the state:\n",
-    "$$\\text{CNOT}_{LR}\\frac{1}{\\sqrt{2}}\\left(|0\\rangle_L-|1\\rangle_L\\right)|1\\rangle_R$$\n",
-    "$$\\text{CNOT}_{LR} H_L|1\\rangle_L|1\\rangle_R$$\n",
-    "$$\\text{CNOT}_{LR} H_L X_L X_R|0\\rangle_L|0\\rangle_R$$\n",
+    "\n",
+    "$$\n",
+    "\\text{CNOT}_{LR}\\frac{1}{\\sqrt{2}}\\left(|0\\rangle_L-|1\\rangle_L\\right)|1\\rangle_R\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{CNOT}_{LR} H_L|1\\rangle_L|1\\rangle_R\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{CNOT}_{LR} H_L X_L X_R|0\\rangle_L|0\\rangle_R\n",
+    "$$\n",
     "\n",
     "Now we have written the ket entirely as quantum gates operating on the default starting state of the qubits.\n",
     "\n",
     "Now we can use the $R_y(\\theta)$ acting on $\\vphantom{p}_L\\langle 0|_R\\langle 1|$ to obtain the bra in the expression for $P_{++}$.\n",
     "\n",
-    "$$\\vphantom{p}_L\\langle0|_R\\left(\\cos(\\theta/2)\\langle0|+\\sin(\\theta/2)\\langle1|\\right)$$\n",
-    "$$\\vphantom{p}_L\\langle0|_R\\left(|0\\rangle \\cos(\\theta/2)+|1\\rangle \\sin(\\theta/2)\\right)^{\\dagger}$$\n",
-    "$$\\vphantom{p}_L\\langle0|\\left(R_{y,R}(\\theta)|0\\rangle_R\\right)^{\\dagger}$$\n",
-    "$$\\vphantom{p}_L\\langle0|_R\\langle0|R_{y,R}(-\\theta)$$\n",
+    "$$\n",
+    "\\vphantom{p}_L\\langle0|_R\\left(\\cos(\\theta/2)\\langle0|+\\sin(\\theta/2)\\langle1|\\right)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\vphantom{p}_L\\langle0|_R\\left(|0\\rangle \\cos(\\theta/2)+|1\\rangle \\sin(\\theta/2)\\right)^{\\dagger}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\vphantom{p}_L\\langle0|\\left(R_{y,R}(\\theta)|0\\rangle_R\\right)^{\\dagger}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\vphantom{p}_L\\langle0|_R\\langle0|R_{y,R}(-\\theta)\n",
+    "$$\n",
     "\n",
     "Combining these results, we can write the probability $P_{++}$ as\n",
     "\n",
-    "$$p_{++}=\\left|\\vphantom{p}_L\\langle0|_R\\langle0|R_{y,R}(-\\theta)\\text{CNOT}_{LR} H_L X_L X_R|0\\rangle_L|0\\rangle_R\\right|^2$$\n",
+    "$$\n",
+    "p_{++}=\\left|\\vphantom{p}_L\\langle0|_R\\langle0|R_{y,R}(-\\theta)\\text{CNOT}_{LR} H_L X_L X_R|0\\rangle_L|0\\rangle_R\\right|^2\n",
+    "$$\n",
     "\n",
     "This gives us explicit instructions for how to construct our quantum circuit. We will apply X, H, CNOT and $R_y$ gates to qubits representing the quantum states of particles measured by Lucas and Rihanna, and make measurements to obtain the probability.\n",
     "\n",
@@ -560,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "63858607-086b-408e-958a-699bf705c5ec",
    "metadata": {},
    "outputs": [],
@@ -580,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4c336847-df4f-47f2-9151-0111eec72d39",
    "metadata": {},
    "outputs": [
@@ -628,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "c9eb5ea9-c781-4ac4-9780-6e1fd45a01e1",
    "metadata": {},
    "outputs": [],
@@ -653,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "717c041d-794a-4ef7-820c-5aee5191154e",
    "metadata": {},
    "outputs": [
@@ -682,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "dc29d491-7f28-4bd8-b877-913a10b02866",
    "metadata": {},
    "outputs": [],
@@ -713,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "6deb8aed-c959-4279-b338-7bdbb03ccdb2",
    "metadata": {},
    "outputs": [
@@ -742,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "59ba69f8-477a-4429-b831-9a8e088160f3",
    "metadata": {},
    "outputs": [],
@@ -775,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ab7cea36-1482-4f2e-94a3-b22519ece4af",
    "metadata": {},
    "outputs": [
@@ -863,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c490a6b7-2f21-40b1-9cee-81da7adfec7b",
    "metadata": {},
    "outputs": [],
@@ -882,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "5308a428-dedb-40f4-ab46-95f58d913623",
    "metadata": {},
    "outputs": [
@@ -941,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "c7ee41f3-b642-4694-873f-bea0c47bacce",
    "metadata": {},
    "outputs": [
@@ -987,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "668b0b2a-5f36-4d8e-a36f-5b3622312ae6",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "6644b77a-e3bc-47ba-b323-947d5b8ee0c3",
    "metadata": {},
    "outputs": [
