--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -59,7 +59,9 @@ IBM Quantum Composer has a customizable set of tools that allow you to build, vi
 
 1. (Optional) If you are not currently signed in to IBM Quantum, select **Sign in** in the upper right corner. Then, you can either sign in or **Create an IBM Cloud account**.
 
+<Admonition type="note">
    If you don’t sign in, the visualizations automatically show simulated results for up to four qubits. If you want to run your circuit on a quantum computer, or if you want to visualize a circuit that has more than four qubits, you must sign in.
+</Admonition>
 
 2. Open IBM Quantum Composer by clicking the link on the [Learning page](/learning) navigation. The workspace displays an untitled empty circuit. You can either create a new circuit, or upload a .qasm file to continue working with with a circuit you've already created. 
 
@@ -157,8 +159,9 @@ To export an image of your circuit, select File → Export circuit image. The Ex
 
 ### 3. Build your circuit with OpenQASM code
 
-> **Note**
-> IBM Quantum Composer currently supports OpenQASM 2.0.
+<Admonition type="note">
+IBM Quantum Composer currently supports OpenQASM 2.0.
+</Admonition>
 
 * To open the code editor, click View → Panels → Code Editor.
 * See the [Composer operations glossary](#composer-operations-glossary) for OpenQASM references to gates and other operations.
@@ -293,8 +296,9 @@ Inspector controls, in order: jump to the beginning of a circuit, step backward,
 
 * To close the Inspector and return to editing your circuit, click the Inspect toggle in the toolbar.
 
-> **Randomness in the simulator**
-> The simulator creates randomness by generating results based on a *seed*. The seed is the initial value introduced into the algorithm that generates pseudorandom numbers. You can see the seed number by selecting Visualizations seed from the Edit menu. You can also set the seed yourself by changing the value in the box.
+<Admonition type="note" title="Randomness in the simulator">
+The simulator creates randomness by generating results based on a *seed*. The seed is the initial value introduced into the algorithm that generates pseudorandom numbers. You can see the seed number by selecting Visualizations seed from the Edit menu. You can also set the seed yourself by changing the value in the box.
+</Admonition>
 
 ## Run circuits and view results
 
@@ -311,8 +315,9 @@ You can optionally name the job and add tags in this panel as well. This will no
 
 ![Window displaying job options.](/docs/images/guides/composer/Learning_Run.svg)
 
-> **Note**
-> When you run a circuit, it is automatically sent to the least busy QPU, unless you specify a QPU in the Run settings. If you run the same circuit again, the QPU selection window will default to your previous choice.
+<Admonition type="note">
+When you run a circuit, it is automatically sent to the least busy QPU, unless you specify a QPU in the Run settings. If you run the same circuit again, the QPU selection window will default to your previous choice.
+</Admonition>
 
 ### Click "Run on (QPU name)"
 
@@ -330,8 +335,9 @@ You can download the circuits and the histogram by clicking the menu in the uppe
 
 The live visualizations in IBM Quantum Composer show you different views of how quantum circuits affect the state of a collection of qubits. Each type of live visualization is explained in detail below.
 
-> **Randomness in the simulator**
-> The live visualizations come from a single-shot statevector simulator, which is different from the QPU specified in the Run settings, which can have multiple shots. The simulator creates randomness by generating results based on a *seed*. The seed is the initial value introduced into the algorithm that generates pseudorandom numbers and simulates quantum randomness. Because the seed is fixed during your circuit session, your live visualizations will be repeatable. However, when you close your circuit and re-open it, the seed will have a new value, so you may see a different visualization. You can set the seed yourself by changing the value in the box (up to four digits) after the words `Visualizations seed` above the Composer, and observe how the live visualizations for your circuit change.
+<Admonition type="note" title="Randomness in the simulator">
+The live visualizations come from a single-shot statevector simulator, which is different from the QPU specified in the Run settings, which can have multiple shots. The simulator creates randomness by generating results based on a *seed*. The seed is the initial value introduced into the algorithm that generates pseudorandom numbers. You can see the seed number by selecting Visualizations seed from the Edit menu. You can also set the seed yourself by changing the value in the box.
+</Admonition>
 
 ### View visualizations
 
