last batch of admonitions

--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -433,8 +433,9 @@ A quantum circuit and the q-sphere representing the state the circuit creates.
 
 You can select, hold, and drag to rotate the q-sphere. To return the q-sphere to its default orientation, select the **rewind-arrow button** to the top right of the q-sphere.
 
-> **What is the difference between a Bloch sphere and a q-sphere?**
-> It is important to highlight that the q-sphere is **not** the same as the Bloch sphere, even for a single qubit. Indeed, like the [phase disk](#phase-disk), the Bloch sphere gives a *local* view of the quantum state, where each qubit is viewed on its own. When trying to understand how registers of qubits (multi-qubit states) behave upon the application of quantum circuits, it is more insightful to take a *global* view and look at the quantum state in its entirety. The q-sphere provides a visual representation of the quantum state, and thus this *global* viewpoint. Therefore, when exploring quantum applications and algorithms on small numbers of qubits, the q-sphere should be the primary visualization method.
+<Admonition type="note" title="What is the difference between a Bloch sphere and a q-sphere?">
+It is important to highlight that the q-sphere is **not** the same as the Bloch sphere, even for a single qubit. Indeed, like the [phase disk](#phase-disk), the Bloch sphere gives a *local* view of the quantum state, where each qubit is viewed on its own. When trying to understand how registers of qubits (multi-qubit states) behave upon the application of quantum circuits, it is more insightful to take a *global* view and look at the quantum state in its entirety. The q-sphere provides a visual representation of the quantum state, and thus this *global* viewpoint. Therefore, when exploring quantum applications and algorithms on small numbers of qubits, the q-sphere should be the primary visualization method.
+</Admonition>
 
 ### Statevector view
 
@@ -462,8 +463,9 @@ The q-sphere image in each gate entry below shows the state after the gate opera
 
 You can define a custom operation to use in IBM Quantum Composer. For instructions, see the [Create a custom operation in OpenQASM](#create-a-custom-operation-in-openqasm) topic.
 
-> **Note**
-> The gate colors are slightly different in the light and dark themes. The colors from the light theme are shown here.
+<Admonition type="note">
+The gate colors are slightly different in the light and dark themes. The colors from the light theme are shown here.
+</Admonition>
 
 Click a quantum operation below to view its definition.
 
