new image and delete old

--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -29,7 +29,7 @@ Instead of writing code by hand, automatically generate OpenQASM or Python code 
 
 IBM Quantum Composer has a customizable set of tools that allow you to build, visualize, and run quantum circuits on quantum processing units (QPUs). Use the More options menu on each window to access additional tools and actions.
 
-![IBM Quantum Composer window.](/docs/images/guides/composer/52af25d0-aafe-4a4d-b92b-91cd3a3c54a1.avif)
+![IBM Quantum Composer window.](/docs/images/guides/composer/Learning_Composer-Annotated.svg)
 
 1. **Operations catalog** - These are the building blocks of quantum circuits. Drag and drop these gates and other operations onto the graphical circuit editor. Different types of gates are grouped together by color. For example, classical gates are dark blue, phase gates are light blue, and non-unitary operations are grey.
 
