--- a/docs/api/qiskit-ibm-transpiler/0.11/ai-ai-permutation-synthesis.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.11/ai-ai-permutation-synthesis.mdx
@@ -1,22 +1,22 @@
 ---
-title: AICliffordSynthesis (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AICliffordSynthesis in the latest version of qiskit-ibm-transpiler
+title: AIPermutationSynthesis (v0.11)
+description: API reference for qiskit_ibm_transpiler.ai.AIPermutationSynthesis in qiskit-ibm-transpiler v0.11
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
+python_api_name: qiskit_ibm_transpiler.ai.AIPermutationSynthesis
 ---
 
-# AICliffordSynthesis
+# AIPermutationSynthesis
 
-<Class id="qiskit_ibm_transpiler.ai.AICliffordSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/synthesis.py#L179-L230" signature="qiskit_ibm_transpiler.ai.AICliffordSynthesis(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L286-L330" signature="qiskit_ibm_transpiler.ai.AIPermutationSynthesis(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Clifford circuits (blocks of H, S and CX gates). Currently up to 9 qubit blocks.
+  Synthesis for Permutation circuits (blocks of SWAP gates). Currently available for 65, 33, and 27 qubit blocks.
 
   **Parameters**
 
   *   **coupling\_map** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]], optional*) – A list of pairs that represents physical links between qubits.
-  *   **backend** (*Backend, optional*) – Backend used for doing the AI Clifford synthesis.
+  *   **backend** (*Backend, optional*) – Backend used for doing the AI Permutation synthesis.
   *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
   *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the number of requests to send in parallel.
 
@@ -24,7 +24,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### is\_analysis\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.is_analysis_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.is_analysis_pass">
     Check if the pass is an analysis pass.
 
     If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
@@ -32,7 +32,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### is\_transformation\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.is_transformation_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.is_transformation_pass">
     Check if the pass is a transformation pass.
 
     If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
@@ -42,13 +42,13 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
 
     *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) – Qiskit IR to optimize.
-    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")) – State associated with workflow execution by the pass manager itself.
+    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")) – State associated with workflow execution by the pass manager itself.
     *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.13)")) – A callback function which is caller per execution of optimization task.
 
     **Returns**
@@ -57,12 +57,12 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
     **Return type**
 
-    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")]
+    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")]
   </Function>
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -72,12 +72,12 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/synthesis.py#L159-L176" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L159-L176" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
 
-    **dag** ([*DAGCircuit*](/docs/api/qiskit/qiskit.dagcircuit.DAGCircuit "(in Qiskit v2.1)")) – the dag on which the pass is run.
+    **dag** ([*DAGCircuit*](/docs/api/qiskit/qiskit.dagcircuit.DAGCircuit "(in Qiskit v2.0)")) – the dag on which the pass is run.
 
     **Raises**
 
@@ -86,16 +86,16 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
   ### synth\_nodes
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/synthesis.py#L112-L157" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.synth_nodes" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/synthesis.py#L112-L157" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.AICliffordSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.AIPermutationSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
 
-    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")) – Pass manager state to update.
+    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")) – Pass manager state to update.
     *   **run\_state** (*RunState*) – Completion status of current task.
 
     **Returns**
@@ -104,7 +104,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AICliffordSynthesis
 
     **Return type**
 
-    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")
+    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")
   </Function>
 </Class>
 
