--- a/docs/api/qiskit-ibm-transpiler/0.11/ai-ai-routing.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.11/ai-ai-routing.mdx
@@ -1,6 +1,6 @@
 ---
-title: AIRouting (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.AIRouting in the latest version of qiskit-ibm-transpiler
+title: AIRouting (v0.11)
+description: API reference for qiskit_ibm_transpiler.ai.AIRouting in qiskit-ibm-transpiler v0.11
 in_page_toc_min_heading_level: 1
 python_api_type: class
 python_api_name: qiskit_ibm_transpiler.ai.AIRouting
@@ -8,8 +8,8 @@ python_api_name: qiskit_ibm_transpiler.ai.AIRouting
 
 # AIRouting
 
-<Class id="qiskit_ibm_transpiler.ai.AIRouting" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/routing.py#L98-L274" signature="qiskit_ibm_transpiler.ai.AIRouting(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, optimization_level: int = 2, layout_mode: str = 'OPTIMIZE')" modifiers="class">
-  Bases: [`TransformationPass`](/docs/api/qiskit/qiskit.transpiler.TransformationPass "(in Qiskit v2.1)")
+<Class id="qiskit_ibm_transpiler.ai.AIRouting" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/routing.py#L98-L274" signature="qiskit_ibm_transpiler.ai.AIRouting(coupling_map: list[list[int]] | None = None, backend: Backend | None = None, optimization_level: int = 2, layout_mode: str = 'OPTIMIZE')" modifiers="class">
+  Bases: [`TransformationPass`](/docs/api/qiskit/qiskit.transpiler.TransformationPass "(in Qiskit v2.0)")
 
   The AIRouting pass acts both as a layout stage and a routing stage.
 
@@ -48,7 +48,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIRouting
     **Parameters**
 
     *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) – Qiskit IR to optimize.
-    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")) – State associated with workflow execution by the pass manager itself.
+    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")) – State associated with workflow execution by the pass manager itself.
     *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.13)")) – A callback function which is caller per execution of optimization task.
 
     **Returns**
@@ -57,7 +57,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIRouting
 
     **Return type**
 
-    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")]
+    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")]
   </Function>
 
   ### name
@@ -72,7 +72,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIRouting
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.AIRouting.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/routing.py#L197-L274" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.AIRouting.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/routing.py#L197-L274" signature="run(dag)">
     Run the AIRouting pass on dag.
 
     **Parameters**
@@ -100,7 +100,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIRouting
 
     **Parameters**
 
-    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")) – Pass manager state to update.
+    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")) – Pass manager state to update.
     *   **run\_state** (*RunState*) – Completion status of current task.
 
     **Returns**
@@ -109,7 +109,7 @@ python_api_name: qiskit_ibm_transpiler.ai.AIRouting
 
     **Return type**
 
-    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")
+    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")
   </Function>
 </Class>
 
