--- a/docs/api/qiskit-ibm-transpiler/0.11/ai-collect-linear-functions.mdx
+++ b/docs/api/qiskit-ibm-transpiler/0.11/ai-collect-linear-functions.mdx
@@ -1,23 +1,23 @@
 ---
-title: CollectCliffords (latest version)
-description: API reference for qiskit_ibm_transpiler.ai.CollectCliffords in the latest version of qiskit-ibm-transpiler
+title: CollectLinearFunctions (v0.11)
+description: API reference for qiskit_ibm_transpiler.ai.CollectLinearFunctions in qiskit-ibm-transpiler v0.11
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
+python_api_name: qiskit_ibm_transpiler.ai.CollectLinearFunctions
 ---
 
-# CollectCliffords
+# CollectLinearFunctions
 
-<Class id="qiskit_ibm_transpiler.ai.CollectCliffords" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/collection.py#L397-L434" signature="qiskit_ibm_transpiler.ai.CollectCliffords(do_commutative_analysis: bool = True, min_block_size: int = 2, max_block_size: int = CLIFFORD_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
+<Class id="qiskit_ibm_transpiler.ai.CollectLinearFunctions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/collection.py#L321-L358" signature="qiskit_ibm_transpiler.ai.CollectLinearFunctions(do_commutative_analysis: bool = True, min_block_size: int = 4, max_block_size: int = LINEAR_MAX_BLOCK_SIZE, collect_from_back: bool = False, num_reps: int = 10)" modifiers="class">
   Bases: `RepeatedCollectAndCollapse`
 
-  Collects Clifford blocks as Instruction objects and stores the original sub-circuit to compare against it after synthesis.
+  Collects blocks of SWAP and CX as LinearFunction objects and stores the original sub-circuit to compare against it after synthesis.
 
   **Parameters**
 
   *   **do\_commutative\_analysis** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) – Enable or disable commutative analysis, defaults to True
-  *   **min\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the minimum size for blocks generated during the collect Cliffords pass, defaults to 2.
-  *   **max\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the maximum size for blocks generated during the collect Cliffords pass, defaults to 9.
+  *   **min\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the minimum size for blocks generated during the collect linear functions pass, defaults to 4.
+  *   **max\_block\_size** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Set the maximum size for blocks generated during the collect linear functions pass, defaults to 9.
   *   **collect\_from\_back** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")*, optional*) – Specify if collect blocks in reverse order or not, defaults to False.
   *   **num\_reps** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*, optional*) – Specify how many times to repeat the optimization process, defaults to 10.
   *   **collect\_function** (*callable*) – a function that takes a DAG and returns a list of “collected” blocks of nodes
@@ -28,7 +28,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
   ### is\_analysis\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.CollectCliffords.is_analysis_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.is_analysis_pass">
     Check if the pass is an analysis pass.
 
     If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
@@ -36,7 +36,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
   ### is\_transformation\_pass
 
-  <Attribute id="qiskit_ibm_transpiler.ai.CollectCliffords.is_transformation_pass">
+  <Attribute id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.is_transformation_pass">
     Check if the pass is a transformation pass.
 
     If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
@@ -46,13 +46,13 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
   ### execute
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
 
     *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) – Qiskit IR to optimize.
-    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")) – State associated with workflow execution by the pass manager itself.
+    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")) – State associated with workflow execution by the pass manager itself.
     *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.13)")) – A callback function which is caller per execution of optimization task.
 
     **Returns**
@@ -61,12 +61,12 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
     **Return type**
 
-    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")]
+    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")]
   </Function>
 
   ### name
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.name" signature="name()">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -76,7 +76,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
   ### run
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.12/qiskit_ibm_transpiler/ai/collection.py#L370-L394" signature="run(dag)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.run" github="https://github.com/Qiskit/qiskit-ibm-transpiler/tree/stable/0.11/qiskit_ibm_transpiler/ai/collection.py#L254-L278" signature="run(dag)">
     Run the CollectLinearFunctions pass on dag. :param dag: the DAG to be optimized. :type dag: DAGCircuit
 
     **Returns**
@@ -90,12 +90,12 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
   ### update\_status
 
-  <Function id="qiskit_ibm_transpiler.ai.CollectCliffords.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_ibm_transpiler.ai.CollectLinearFunctions.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
 
-    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")) – Pass manager state to update.
+    *   **state** ([*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")) – Pass manager state to update.
     *   **run\_state** (*RunState*) – Completion status of current task.
 
     **Returns**
@@ -104,7 +104,7 @@ python_api_name: qiskit_ibm_transpiler.ai.CollectCliffords
 
     **Return type**
 
-    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.1)")
+    [*PassManagerState*](/docs/api/qiskit/qiskit.passmanager.PassManagerState "(in Qiskit v2.0)")
   </Function>
 </Class>
 
