--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -23,7 +23,7 @@ Run your circuits on real quantum hardware to understand the effects of device n
 
 **Automatically generate code**
 
-Instead of writing code by hand, automatically generate OpenQASM or Python code that behaves the same way as the circuit you created with Quantum Composer.
+Instead of writing code by hand, automatically generate OpenQASM or Python code that behaves the same way as the circuit you created with the Composer.
 
 ## Tour of the interface
 
@@ -54,6 +54,11 @@ IBM Quantum Composer has a customizable set of tools that allow you to build, vi
    Learn more in the [Visualizations](#visualizations) section.
 
 ## Build, edit, and inspect quantum circuits
+
+<Admonition type="warning" title="Download your circuit files before exiting the Composer">
+
+If you want to continue working with a circuit at a later time, be sure to download your circuit file and store it locally before exiting your current Composer session. Use the Save file link in the upper-right corner, or go to the File menu and choose Save file. When you are ready to work with the circuit again, go to the File menu and choose Upload .qasm file, then navigate to your circuit file on your local drive and click Open.
+</Admonition>
 
 ### 1. Open IBM Quantum Composer
 
