Apply suggestions from code review

--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -125,7 +125,7 @@
    "id": "32f44dc0",
    "metadata": {},
    "source": [
-    "## Part I. Small scale example"
+    "## Part I. Small-scale example"
    ]
   },
   {
@@ -249,7 +249,7 @@
    "id": "13c67498",
    "metadata": {},
    "source": [
-    "We define a transpiler pass to collect the XX and YY rotations in the circuit as a single XX+YY gate. This will allow us to leverage TeNPy's spin conservation properties during the MPO computation, significantly speeding up the calculation!"
+    "We define a transpiler pass to collect the XX and YY rotations in the circuit as a single XX+YY gate. This will allow us to leverage TeNPy's spin conservation properties during the MPO computation, significantly speeding up the calculation."
    ]
   },
   {
@@ -302,7 +302,7 @@
    "id": "46470a22",
    "metadata": {},
    "source": [
-    "Then we create the circuits impplementing the approximate Trotter time-evolutions."
+    "Then we create the circuits implementing the approximate Trotter time-evolutions."
    ]
   },
   {
@@ -371,7 +371,7 @@
    "id": "aa95b6c8",
    "metadata": {},
    "source": [
-    "And calculate the time-evolved expectation values from the Trotter circuits"
+    "And calculate the time-evolved expectation values from the Trotter circuits."
    ]
   },
   {
@@ -412,7 +412,7 @@
    "id": "b84e4000",
    "metadata": {},
    "source": [
-    "We also calculate the exact expectation values to compare to"
+    "We also calculate the exact expectation values for comparison."
    ]
   },
   {
@@ -456,9 +456,9 @@
     "$$ \\sum_{j=1}^l x_j = 1 $$\n",
     "$$ \\sum_{j=1}^{l-1} \\frac{x_j}{k_j^{n}} = 0 $$\n",
     "\n",
-    "with $n=0, ... l-2$. The first equation guarantees that there is no bias in the constructed state $\\mu(t)$ while the second equation ensures the cancellation of the Trotter errors. For higher order PF the second equation becomes $ \\sum_{j=1}^{l-1} \\frac{x_j}{k_j^{\\eta}} = 0 $ where $\\eta = \\chi + 2n$ for symmetric PFs and $\\eta = \\chi + n$ otherwise, with $n=0, ..., l-2$. The resulting error  (Refs. [\\[1\\]](#Reference1),[\\[2\\]](#Reference2)) is then\n",
+    "with $n=0, ... l-2$. The first equation guarantees that there is no bias in the constructed state $\\mu(t)$, while the second equation ensures the cancellation of the Trotter errors. For higher-order PF, the second equation becomes $ \\sum_{j=1}^{l-1} \\frac{x_j}{k_j^{\\eta}} = 0 $ where $\\eta = \\chi + 2n$ for symmetric PFs and $\\eta = \\chi + n$ otherwise, with $n=0, ..., l-2$. The resulting error  (Refs. [\\[1\\]](#Reference1),[\\[2\\]](#Reference2)) is then\n",
     "\n",
-    "$$ \\epsilon = \\mathcal{O} \\left( \\frac{t^{l+1}}{k_1^l} \\right)$$\n",
+    "$$ \\epsilon = \\mathcal{O} \\left( \\frac{t^{l+1}}{k_1^l} \\right).$$\n",
     "\n",
     "\n",
     "Determining the static MPF coefficients for a given set of $k_j$ values amounts to solving the linear system of equations defined by the two equations above for the variables $x_j$: $Ax=b$. Where $x$ are our coefficients of interest, $A$ is a matrix which depends on $k_j$ and the type of PF we use ($S$), and $b$ is a vector of constraints. Specifically:\n",
