Apply suggestions from code review

--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -573,7 +573,7 @@
    "id": "d6f76196",
    "metadata": {},
    "source": [
-    "Let's work through the values chosen above to construct the $A$ matrix and the $b$ vector. With $j=0,1, 2$ Trotter steps $k_j = [1, 2, 4]$, order $\\chi = 2$ and choice of non-symmetric Trotter steps ($s=1$) we have that the matrix elements of $A$ below the first row are determined by the expression $A_{i>0,j} = k_{j}^{-(2 + 1(i-1))}$, specifically:\n",
+    "Let's work through the values chosen above to construct the $A$ matrix and the $b$ vector. With $j=0,1, 2$ Trotter steps $k_j = [1, 2, 4]$, order $\\chi = 2$ and choice of non-symmetric Trotter steps ($s=1$), we have that the matrix elements of $A$ below the first row are determined by the expression $A_{i>0,j} = k_{j}^{-(2 + 1(i-1))}$, specifically:\n",
     "\n",
     "$$ A_{0,0} = A_{0,1} = A_{0,2} =  1 $$\n",
     "$$ A_{1,j} = k_{j}^{-1}  \\rightarrow A_{1,0} = \\frac{1}{1^2}, \\;, A_{1,1} = \\frac{1}{2^2}, \\;, A_{1,2} = \\frac{1}{4^2}$$\n",
@@ -590,7 +590,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "As it's possible to see by inspecting the `lse` object"
+    "This is possible to see by inspecting the `lse` object:"
    ]
   },
   {
@@ -636,7 +636,7 @@
     "$$\n",
     "\n",
     "\n",
-    "And similarly in `lse`"
+    "And similarly in `lse`:"
    ]
   },
   {
@@ -665,7 +665,7 @@
    "id": "fc47c29f",
    "metadata": {},
    "source": [
-    "The `lse` object has methods for finding the static coefficients $x_j$ satisfying the system of equations"
+    "The `lse` object has methods for finding the static coefficients $x_j$ satisfying the system of equations."
    ]
   },
   {
@@ -694,7 +694,7 @@
    "id": "6b228e6f",
    "metadata": {},
    "source": [
-    "##### Optimizing for $x$ using an exact model\n",
+    "##### Optimize for $x$ using an exact model\n",
     "\n",
     "Alternatively to computing $x=A^{-1}b$, you can also use [setup_exact_model](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.setup_exact_model.html) to construct a [cvxpy.Problem](https://www.cvxpy.org/api_reference/cvxpy.problems.html#cvxpy.Problem) instance which uses the LSE as constraints and whose optimal solution will yield $x$.\n",
     "\n",
@@ -757,7 +757,7 @@
    "id": "577dc339",
    "metadata": {},
    "source": [
-    "##### Optimizing for $x$ using an approximate model\n",
+    "##### Optimize for $x$ using an approximate model\n",
     "\n",
     "It may happen that the L1 norm for the chosen set of $k_j$ values is deemed too high.\n",
     "If that is the case and you cannot choose a different set of $k_j$ values, you can use an approximate solution to the LSE instead of an exact one.\n",
@@ -799,8 +799,8 @@
    "id": "214239bb",
    "metadata": {},
    "source": [
-    "Note, that you have complete freedom over how to solve this optimization problem, meaning that you can change the optimization solver, its convergence thresholds, and so on.\n",
-    "Check out the respective guide on [How to use the approximate model](https://qiskit.github.io/qiskit-addon-mpf/how_tos/using_approximate_model.html)."
+    "Note that you have complete freedom over how to solve this optimization problem, which means that you can change the optimization solver, its convergence thresholds, and so on.\n",
+    "Check out the respective guide on [How to use the approximate model.](https://qiskit.github.io/qiskit-addon-mpf/how_tos/using_approximate_model.html)"
    ]
   },
   {
