--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -902,7 +902,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-danger\">\n",
-    "The options of LayerwiseEvolver which determine the details of the tensor network simulation must be chosen carefully to avoid setting up an ill-defined optimization problem\n",
+    "The options of LayerwiseEvolver that determine the details of the tensor network simulation must be chosen carefully to avoid setting up an ill-defined optimization problem.\n",
     "</div>"
    ]
   },
