Apply suggestions from code review

--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -759,7 +759,7 @@
    "source": [
     "##### Optimize for $x$ using an approximate model\n",
     "\n",
-    "It may happen that the L1 norm for the chosen set of $k_j$ values is deemed too high.\n",
+    "It might happen that the L1 norm for the chosen set of $k_j$ values is deemed too high.\n",
     "If that is the case and you cannot choose a different set of $k_j$ values, you can use an approximate solution to the LSE instead of an exact one.\n",
     "\n",
     "To do so, simply use [setup_approximate_model](https://qiskit.github.io/qiskit-addon-mpf/stubs/qiskit_addon_mpf.static.setup_approximate_model.html) to construct a different [cvxpy.Problem](https://www.cvxpy.org/api_reference/cvxpy.problems.html#cvxpy.Problem) instance which constrains the L1-norm to a chosen threshold while minimizing the difference of $Ax$ and $b$."
@@ -901,9 +901,9 @@
    "id": "fd39f15a",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
+    "<Admonition type="warning">\n",
     "The options of LayerwiseEvolver that determine the details of the tensor network simulation must be chosen carefully to avoid setting up an ill-defined optimization problem.\n",
-    "</div>"
+    "</Admonition>"
    ]
   },
   {
