--- a/docs/tutorials/multi-product-formula.ipynb
+++ b/docs/tutorials/multi-product-formula.ipynb
@@ -901,7 +901,7 @@
    "id": "fd39f15a",
    "metadata": {},
    "source": [
-    "<Admonition type="warning">\n",
+    "<Admonition type=\"warning\">\n",
     "The options of LayerwiseEvolver that determine the details of the tensor network simulation must be chosen carefully to avoid setting up an ill-defined optimization problem.\n",
     "</Admonition>"
    ]
